GNOME Bugzilla – Bug 597186
Selecting custom terminal is broken (and GtkEntry updates are broken)
Last modified: 2009-12-07 22:27:32 UTC
There are really two big issues here (it's valid for other tabs too, except for the browser): + when you select a known terminal from the combo box, the two GtkEntry widgets that display the exec and exec arg values are not updated. I'm not sure why since, looking at the code, they should be updated. + when you select the custom terminal entry from the combo box, the gconf values for the two keys are set to "". Combined with the above bug, the user believes it's still set to something, but it's clearly not.
Yes, I can reproduce. I expect there is a bug in the code to prevent race conditions when updating the entry manually and automatically.
On further investigation, it seems none of the gconf notify callbacks are being called, which used to set clear the Custom entry field (and set the exec and exec arg values).
commit 3d7178b45abc2a291f62c884688fe2890a8040f5 Author: Thomas Wood <thos@gnome.org> Date: Mon Dec 7 22:27:04 2009 +0000 [default-applications] be sure to add the gconf directories for monitoring Fixes https://bugzilla.gnome.org/show_bug.cgi?id=597186