[default-applications] be sure to add the gconf directories for monitoring

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=597186