capplets/default-applications/gnome-da-capplet.c
@@ -967,6 +967,12 @@ main (int argc, char **argv)
 
     capplet = g_new0 (GnomeDACapplet, 1);
     capplet->gconf = gconf_client_get_default ();
+    gconf_client_add_dir (capplet->gconf, "/desktop/gnome/url-handlers",
+                          GCONF_CLIENT_PRELOAD_RECURSIVE, NULL);
+    gconf_client_add_dir (capplet->gconf, 
+                          "/desktop/gnome/applications",
+                          GCONF_CLIENT_PRELOAD_RECURSIVE, NULL);
+
     gnome_da_xml_load_list (capplet);
 
     show_dialog (capplet, start_page);
